--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.test.dmin.criminalintent">
 
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+
+    <uses-permission android:name="android.permission.CAMERA"/>
+
+    <uses-feature android:name="android.hardware.camera"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -14,10 +20,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CrimePagerActivity"
-            android:label="@string/app_name">
 
+
+        <activity android:name=".CrimeActivity" android:label="@string/app_name">
+        <meta-data android:name="android.support.PARENT_ACTIVITY" android:value=".CrimeListActivity"/>
         </activity>
+
+        <activity android:name=".CrimePagerActivity" android:label="@string/app_name">
+        <meta-data android:name="android.support.PARENT_ACTIVITY" android:value=".CrimeListActivity"/>
+         </activity>
+
+        <activity android:name=".CrimeCameraActivity" android:label="@string/app_name" android:screenOrientation="landscape"> </activity>
+
     </application>
 
 </manifest>
